2020-06-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/g_rc.c: Reformat Doxygen documentation.

2020-06-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/edascmhookproxy.c: Do not use "==" and "!=" on SCM values; see
      commit to master branch 2019-10-03 by Roland Lutz <rlutz@hedmen.org>,
      502f962ab50e769f4485132d3043e7ff0f10d255.

    * src/scheme/edascmvaluetypes.c: Same as edascmhookproxy.c above.

2020-06-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/Makefile.am: Pass CPPFLAGS to guile-snarf, see commit to
      master branch 2019-10-03, d7fc8d933c41324d0309a3e9abf36b13347b5fbe.
      This allows running
        make clean
        make CPPFLAGS=-DSCM_DEBUG_TYPING_STRICTNESS=2
        # ...fix errors...
        make clean
        make
      in order to detect SCM typing errors.

    * src/struct/s_clib.c: Replace deprecated SCM_NCONSP with
      !scm_is_pair, see commit to  master branch 2019-10-03,
      e01a763f0c3b9e7fccd41a21e40e7d65791c18f0.

2020-06-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/geda/geda_pin.c: Reformat documentation blocks, update
      documentation for functions:

          * geda_pin_set_whichend
          * geda_pin_set_sequence
          * geda_pin_set_number
          * geda_pin_set_label

2020-05-04 Wiley E. Hill <wileyhill@gmail.com>

    * src/math/m_math.c: Revise geda_math_papersize_to_world to use
      ancillary variables to compute adjustment factors.

    * src/object/o_list.c: Revise geda_object_list_scale to handle the
      case of text object types.

    * src/object/o_text_object.c: Add function geda_text_object_scale.

    * tests/test_line_object.c: Add check for geda_line_object_scale.

    * tests/test_math.c: Add check for geda_math_papersize_to_world.

    * tests/test_object_list.c: Check scale text in list.

    * tests/test_picture_object.c: Check geda_picture_object_get_fall
      back_pixbuf returns a non NULL pointer.

2020-04-20 Wiley E. Hill <wileyhill@gmail.com>
